# CROWDBOT_perception

./: .gitignore  .gitmodules  README.md
addwarp/: CMakeLists.txt  package.xml
addwarp/config/: addwarp.yaml  topics.yaml
addwarp/include/addwarp/: addwarp.h
addwarp/launch/: addwarp.launch
addwarp/src/: addwarp.cpp  addwarp_node.cpp
detection_fusion/: CMakeLists.txt  package.xml  setup.py
detection_fusion/config/: detection_fusion.yaml  topics.yaml
detection_fusion/launch/: detection_fusion.launch
detection_fusion/scripts/: node.py
detection_fusion/src/: detection_fusion.cpp
detection_fusion/src/detection_fusion/: detection_fusion.py  utils.py
drow_ros/drow-v3-dist/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
drow_ros/drow-v3-dist/drow/: demo.py  drow_detector.py
drow_ros/drow-v3-dist/drow/model/: drow.py  polar_drow.py
drow_ros/drow-v3-dist/drow/utils/: eval_utils.py  utils.py
drow_ros/drow-v3-dist/src/drow/: demo.py  drow_detector.py  eval.py  train.py  trt_demo.py
drow_ros/drow-v3-dist/src/drow/cfgs/: PSG_small_width_depth_56.yaml  SPA_11_5.yaml  dynamic_cutout.yaml  dynamic_cutout_aug.yaml  dynamic_cutout_no_grad_clip.yaml  fixed_cutout.yaml  fixed_cutout_aug.yaml  (+2 more)
drow_ros/drow_ros/: CMakeLists.txt  package.xml
drow_ros/drow_ros/config/: drow_ros.yaml  topics.yaml
drow_ros/drow_ros/scripts/: drow_data_converter.py  drow_data_publisher.py  node.py
drow_ros/drow_ros/src/drow_ros/: drow_ros.py  utils.py
perception/rwth_people_tracker/odometry_to_motion_matrix/: CMakeLists.txt  package.xml
perception/rwth_people_tracker/odometry_to_motion_matrix/launch/: odom2visual.launch  tf2visual.launch~
perception/rwth_people_tracker/rwth_annotations/: CMakeLists.txt  README.md  package.xml
perception/rwth_people_tracker/rwth_annotations/include/: Matrix.h  Vector.h
perception/rwth_people_tracker/rwth_annotations/launch/: evaluate.launch  evaluate.launch~  evaluate_01-e24-1700.launch  evaluate_01-e24-1700.launch~  evaluate_01-e24-1930.launch  evaluate_01-e24-1930.launch~  evaluate_02-fe-1255.launch  evaluate_02-fe-1255.launch~  evaluate_03-e1920-2505.launch  evaluate_03-e1920-2505.launch~  evaluate_crowdbot.launch  evaluate_nov05-167.launch  evaluate_nov05-167.launch~  evaluate_nov09-1.launch  evaluate_nov09-1.launch~  evaluate_sequence.launch  evaluate_sequence.launch~  record_annotations.launch
perception/rwth_people_tracker/rwth_annotations/src/: AncillaryMethods.cpp  AnnotationPublisher.cpp  AnnotationPublisher.cpp~  AnnotationReceiver.cpp  BBoxToWorld.cpp  Camera.cpp
perception/rwth_people_tracker/rwth_pedestrian_trajectories/: CMakeLists.txt  package.xml  process_bag.py
perception/rwth_people_tracker/rwth_pedestrian_trajectories/launch/: pedestrian_trajectories.launch
perception/rwth_people_tracker/rwth_pedestrian_trajectories/src/: main.cpp  old_main.cpp  simp_main.cpp
perception/rwth_people_tracker/rwth_upper_body_skeleton_detector/: CMakeLists.txt  package.xml
perception/rwth_people_tracker/rwth_upper_body_skeleton_detector/include/: bodypose_regressor_utilities.h  datatypes.h  forest_utilities.h  mean_shift_utilities.h  tree_utilities.h
perception/rwth_people_tracker/rwth_upper_body_skeleton_detector/launch/: fixed.launch
perception/rwth_people_tracker/rwth_upper_body_skeleton_detector/src/: body_pose_regressor_utilities.cpp  forest_utilities.cpp  main.cpp  mean_shift_utilities.cpp  tree_utilities.cpp
perception/rwth_people_tracker/rwth_upper_body_skeleton_detector/srv/: GetUpperBodySkeleton.srv
rwth_crowdbot_launch/: CMakeLists.txt  README.md  jetson_agx_xavier_TensorRT-Yolov3_modifications.txt  jetson_agx_xavier_requirements_local.txt  jetson_agx_xavier_tensorRTWrapper_modifications.txt  package.xml  setup.py
rwth_crowdbot_launch/config/eth_pepper/detection_fusion/: detection_fusion.yaml  topics.yaml
rwth_crowdbot_launch/config/eth_pepper/drow_ros/: drow_ros.yaml  topics_front.yaml  topics_rear.yaml
rwth_crowdbot_launch/config/eth_pepper/rviz/: crowdbot.rviz
rwth_crowdbot_launch/config/eth_pepper/trt_yolo_ros/: topics.yaml  trt_yolo_ros.yaml
rwth_crowdbot_launch/config/eth_pepper/yolo_to_3d/: yolo_to_3d.yaml
rwth_crowdbot_launch/config/qolo/darknet_ros/: darknet_ros.yaml  topics.yaml
rwth_crowdbot_launch/config/qolo/detection_fusion/: detection_fusion.yaml  topics.yaml
rwth_crowdbot_launch/config/qolo/drow_ros/: drow_ros.yaml  topics.yaml  topics_front.yaml  topics_rear.yaml
rwth_crowdbot_launch/config/qolo/rviz/: crowdbot.rviz
rwth_crowdbot_launch/config/qolo/yolo_to_3d/: topics.yaml
rwth_crowdbot_launch/config/wheelchair/addwarp/: topics.yaml
rwth_crowdbot_launch/config/wheelchair/detection_fusion/: detection_fusion.yaml  topics.yaml
rwth_crowdbot_launch/config/wheelchair/drow_ros/: topics.yaml
rwth_crowdbot_launch/config/wheelchair/rviz/: crowdbot.rviz
rwth_crowdbot_launch/launch/: demotest.launch  eth_pepper_onboard.launch  pwc_net_ros.launch  qolo_bag.launch  qolo_detect.launch  qolo_onboard.launch  wheelchair_onboard.launch
rwth_crowdbot_launch/scripts/: run_pwc_net_ros.sh
trtyolo/: CMakeLists.txt  package.xml
trtyolo/include/: PanoramaCameraModel.h  Visual.h
trtyolo/launch/: tensorRTyolo.launch  trt_yolo_kinect.launch  trt_yolo_left.launch  trt_yolo_rear.launch  trt_yolo_right.launch
trtyolo/src/: main_tensorrtyolo.cpp
trtyolo/tensorRT_yolo/: eval.cpp
trtyolo/tensorRT_yolo/include/: configs.h
trtyolo/tensorRT_yolo/tensorRTWrapper/sample/: configs.h
visualization/spencer_tracking_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
visualization/spencer_tracking_rviz_plugin/src/: additional_topic_subscriber.h  detected_persons_display.cpp  detected_persons_display.h  person_display_common.cpp  person_display_common.h  tracked_persons_cache.cpp  tracked_persons_cache.h  tracked_persons_display.cpp  tracked_persons_display.h
yolofusion/: CMakeLists.txt  package.xml
yolofusion/include/: PanoramaCameraIntrinsic.h  PanoramaCameraModel.h  Vector.h
yolofusion/launch/: yoloconvertor_fusion_test.launch
yolofusion/src/: main.cpp
(+371 files in other folders)
