<?xml version="1.0"?>
<package format="2">
  <name>addwarp</name>
  <version>0.1.0</version>
  <description>Adding optical flow information to detections.</description>

  <license>MIT</license>

  <author email="alexey.nekrasov@rwht-aachen.de">TODO</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>frame_msgs</depend>
</package>
