<?xml version="1.0"?>
<package>
  <name>detection_fusion</name>
  <version>0.0.0</version>
  <description>This is an example roscpp package.</description>

  <maintainer email="todo@todo.com">TODO</maintainer>

  <license>TODO</license>

  <author email="todo@todo.com">TODO</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cv2</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>frame_msgs</run_depend>
  <run_depend>rwth_perception_people_msgs</run_depend>
  <run_depend>darknet_ros_msgs</run_depend>
</package>
