<?xml version="1.0"?>
<package>
  <name>rwth_crowdbot_launch</name>
  <version>0.0.0</version>
  <description>This is master launching and config package for crowdbot project.</description>

  <maintainer email="jia@vision.rwth-aachen.de">Dan Jia</maintainer>

  <license>TODO</license>

  <author email="jia@vision.rwth-aachen.de">Dan Jia</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>darknet_ros</run_depend>
  <run_depend>yolo_to_3d</run_depend>
  <run_depend>reid</run_depend>
  <run_depend>drow_ros</run_depend>
  <run_depend>detection_fusion</run_depend>
  <run_depend>rwth_pedestrian_tracking</run_depend>
  <run_depend>spencer_tracking_rviz_plugin</run_depend>
  <run_depend>trtyolo</run_depend>
  <run_depend>rwth_ground_plane</run_depend>
  <run_depend>addwarp</run_depend>
  <run_depend>pwc_net_ros</run_depend>
</package>
