<?xml version="1.0"?>
<package>
  <name>trtyolo</name>
  <version>0.0.0</version>
  <description>ROS wrapper for yolov3 with tensorRT</description>

  <maintainer email="breuers@vision.rwth-aachen.de">Stefan Breuers</maintainer>

  <license>TODO</license>

  <url type="website">http://www.vision.rwth-aachen.de/</url>

  <author email="neng.qian@rwth-aachen.de">Neng Qian</author>
  <author email="breuers@vision.rwth-aachen.de">Stefan Breuers</author>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>darknet_ros_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>



  <export/>
</package>
