<?xml version="1.0"?>
<package>
  <name>yolofusion</name>
  <version>0.0.0</version>
  <description>Fuse the bounding boxes from 3 different cameras, and output one topic which contains all detected persons in world corrdinator.</description>

  <maintainer email="neng.qian@rwth-aachen.de">Neng Qian</maintainer>

  <license>TODO</license>

  <url type="website">http://www.vision.rwth-aachen.de/</url>

  <author email="neng.qian@rwth-aachen.de">Neng Qian</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rwth_perception_people_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>frame_msgs</build_depend>
  <build_depend>tf</build_depend>



  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rwth_perception_people_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>frame_msgs</run_depend>
  <run_depend>tf</run_depend>




  <export/>
</package>
