<?xml version="1.0"?>
<package>
  <name>drow</name>
  <version>0.0.0</version>
  <description>ROS installation for DROW.</description>

  <maintainer email="dan@todo.todo">dan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
