<?xml version="1.0"?>
<package>
  <name>rwth_pedestrian_trajectories</name>
  <version>0.0.0</version>
  <description>The trajectories package</description>

  <maintainer email="breuers@vision.rwth-aachen.de">Stefan Breuers</maintainer>

  <license>MIT</license>

  <url type="website">http://www.vision.rwth-aachen.de/</url>

  <author email="breuers@vision.rwth-aachen.de">Stefan Breuers</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>frame_msgs</build_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>frame_msgs</run_depend>


  <export/>
</package>
